* Optimize Function bind, bindAsEventListener, curry, methodize and wrap to avoid Array#concat and Function#apply when not needed. [#215 state:resolved]  [kangax, Tobie Langel]

* Add private helper method nodeListSlice() to complement slice(). [jddalton]

* Cleanup whitespace in source files. [jddalton]

* Wrap Prototype in a closure to take advantage of private variables and methods. [jddalton]

* Remove browser sniffs in Selector.handlers "mark" and "concat". [jddalton, kangax]

* Remove browser sniffs for Safari's $A() and Opera's Array#concat redeclaration. [jddalton, kangax]

* Remove IE code related to "fixed" positioned elements because IE doesn't support "fixed" elements. [jddalton]

* Remove Object.is(Function|Number|String) from internal use in favor of simple "typeof" operators. [jddalton]

* Overwrite Array.prototype methods assigned by Enumerable with optimized equivalents. [jddalton]

* Optimize by using "_each" instead of "each" where applicable. Closes #9092. [jddalton, sylvainzimmer]

* Preserve inline display style when using Element#show and Element#hide. Closes #3868. [anonymous, Tobie Langel]

* Fix issue where Function#argumentNames returned incorrect results in IE when comments were intermixed with argument names. [#397 state:resolved] [Christophe Porteneuve, T.J. Crowder]

* unit test: Reorganize the unit test lib. [Tobie Langel]

* Make Element#viewportOffset take advantage of getBoundingClientRect()'s speed boost when supported. [Andrew Dupont, Andrew Kaspick, jddalton]

* unit test: Add/modify unit tests for Event observe/stopObserving and Element#(absolutize|relativize|scrollTo|viewportOffset). [jddalton, Nick Stakenburg]

* For consistency, add additional optional parameter "context" to Number#times. Closes #9252. [rmm5t, Samuel Lebeau]

* Selector.patterns should be represented as an ordered structure. [#315 state:resolved] [ADO, kangax]
