@@ -1,3 +1,5 @@
+* Add private helper methods mergeList and prependList to replace Array#concat usage. [jddalton, Tobie Langel]
+
 * Optimize Function bind, bindAsEventListener, curry, methodize and wrap to avoid Array#concat and Function#apply when not needed. [#215 state:resolved]  [kangax, Tobie Langel]
 
 * Add private helper method nodeListSlice() to complement slice(). [jddalton]
